es props as host and port

--- a/src/main/resources/shared/parsers-manager-service.yml
+++ b/src/main/resources/shared/parsers-manager-service.yml
@@ -13,8 +13,8 @@ spring:
   mandatory-file-encoding: UTF-8
 
   elasticsearch:
-    rest:
-      uris: http://elasticsearch:9200
+    hostname: elasticsearch
+    port: 9300
   data:
     mongodb:
       database: picstories
