--- a/src/main/resources/shared/api-service.yml
+++ b/src/main/resources/shared/api-service.yml
@@ -5,5 +5,5 @@ spring:
   application:
     name: api-service
   elasticsearch:
-    rest:
-      uris: http://elasticsearch:9200
+    hostname: elasticsearch
+    port: 9300
