es props as host and port

--- a/src/main/resources/shared/api-service.yml
+++ b/src/main/resources/shared/api-service.yml
@@ -5,5 +5,7 @@ spring:
   application:
     name: api-service
   elasticsearch:
-    hostname: elasticsearch
-    port: 9300
+    jest:
+      proxy:
+        host: elasticsearch
+        port: 9300
