--- a/src/main/resources/shared/parsers-manager-service.yml
+++ b/src/main/resources/shared/parsers-manager-service.yml
@@ -13,8 +13,10 @@ spring:
   mandatory-file-encoding: UTF-8
 
   elasticsearch:
-    hostname: elasticsearch
-    port: 9300
+    jest:
+      proxy:
+        host: elasticsearch
+        port: 9300
   data:
     mongodb:
       database: picstories
