fix mongodb connection string config

--- a/src/main/resources/shared/parsers-manager-service.yml
+++ b/src/main/resources/shared/parsers-manager-service.yml
@@ -21,7 +21,7 @@ spring:
     mongodb:
       database: picstories
       port: 27017
-      uri: http://mongo:27017/picstories
+      uri: mongodb://mongo:27017/picstories
       username: picstories
       password: picstories
 
