fix mongodb connection string config

--- a/src/main/resources/shared/parsers-manager-service.yml
+++ b/src/main/resources/shared/parsers-manager-service.yml
@@ -21,7 +21,7 @@ spring:
     mongodb:
       database: picstories
       #port: 27017
-      uri: mongodb://picstories:picstories@mongo:27017/picstories/?replicaSet=rs0
+      uri: mongodb://picstories:picstories@mongo:27017/picstories?replicaSet=rs0
       #username: picstories
       #password: picstories
 
